// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TelegramButton adds a beforeClick function for the click handler 1`] = `
<ButtonRound
  aria-label="Telegram"
  className="share-button--telegram"
  href="#"
  icon={[Function]}
  label="Telegram"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`TelegramButton does render if boxShadow is true 1`] = `
<ButtonRound
  aria-label="Telegram"
  boxShadow={true}
  className="share-button--telegram"
  href="#"
  icon={[Function]}
  label="Telegram"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`TelegramButton does render if teaser are provided 1`] = `
<ButtonRound
  aria-label="Telegram"
  className="share-button--telegram"
  href="#"
  icon={[Function]}
  label="Telegram"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`TelegramButton does render if utmParams are provided 1`] = `
<ButtonRound
  aria-label="Telegram"
  className="share-button--telegram"
  href="#"
  icon={[Function]}
  label="Telegram"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`TelegramButton renders a round button 1`] = `
<ButtonRound
  aria-label="Telegram"
  className="share-button--telegram"
  href="#"
  icon={[Function]}
  label="Telegram"
  onClick={[Function]}
  role="button"
  title=""
/>
`;
